<resources>
    <string name="app_name">grocerystore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">first name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="mobile">mobile</string>
    <string name="to_register">back to register</string>
    <string name="to_login">back to login</string>
    <string name="button_remove">remove</string>
</resources>